gcc/testsuite/rust/rustc/ui/issues/issue-21554.rs
struct Inches(i32);

fn main() {
    Inches as f32;
// { dg-error ".E0606." "" { target *-*-* } .-1 }
}

